# github-actions-python

./: pyproject.toml
.github/workflows/: pipeline-dev.yml
etl_pyspark/: Main.py  config.yml
etl_pyspark/di/: Container.py
etl_pyspark/flows/: IMainCoordinator.py  MainCoordinator.py
etl_pyspark/flows/flows/: ReadFilesFlow.py  StreamFilesFlow.py
etl_pyspark/modules/spark/: IPySparkManager.py  PySparkManager.py
etl_pyspark/resources/: sample-5.json
tests/: test_etl_pyspark.py
